<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>eu.sanjin.kurelic.cbc</groupId>
    <artifactId>CapitalBusConnect</artifactId>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>CapitalBusConnectRepository</module>
        <module>CapitalBusConnectService</module>
        <module>CapitalBusConnectPresentation</module>
    </modules>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.source>11</maven.compiler.source>
        <cbc.version.surefire>3.0.0-M3</cbc.version.surefire>
        <cbc.version.depedency>3.1.1</cbc.version.depedency>
        <cbc.version.junit>5.4.0</cbc.version.junit>
        <cbc.version.log4j>1.7.25</cbc.version.log4j>
        <cbc.version.jstl>1.2</cbc.version.jstl>
        <cbc.version.servlet>4.0.1</cbc.version.servlet>
        <cbc.version.jsp>2.3.3</cbc.version.jsp>
        <cbc.version.spring>5.1.3.RELEASE</cbc.version.spring>
        <cbc.version.springdata>2.1.5.RELEASE</cbc.version.springdata>
        <cbc.version.validation>2.0.1.Final</cbc.version.validation>
        <cbc.version.jackson>2.9.8</cbc.version.jackson>
        <cbc.version.aop>1.9.2</cbc.version.aop>
        <cbc.version.annotation>1.3.2</cbc.version.annotation>
        <cbc.version.bean>1.9.3</cbc.version.bean>
        <cbc.version.validator>6.0.15.Final</cbc.version.validator>
        <cbc.version.mysql>8.0.14</cbc.version.mysql>
        <cbc.version.hibernate>5.4.1.Final</cbc.version.hibernate>
        <cbc.version.c3po>0.9.5.3</cbc.version.c3po>
        <cbc.version.warplugin>3.2.2</cbc.version.warplugin>
        <cbc.version.frontend>1.6</cbc.version.frontend>
        <cbc.version.node>v10.14.1</cbc.version.node>
        <cbc.version.npm>6.4.1</cbc.version.npm>
    </properties>

    <dependencies>
        <!-- Servlet, JSP, JSTL -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>jstl</artifactId>
            <version>${cbc.version.jstl}</version>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>${cbc.version.servlet}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet.jsp</groupId>
            <artifactId>javax.servlet.jsp-api</artifactId>
            <version>${cbc.version.jsp}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Spring -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
            <version>${cbc.version.spring}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-orm</artifactId>
            <version>${cbc.version.spring}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${cbc.version.spring}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-web</artifactId>
            <version>${cbc.version.spring}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-config</artifactId>
            <version>${cbc.version.spring}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-taglibs</artifactId>
            <version>${cbc.version.spring}</version>
        </dependency>

        <!-- Jackson, spring data and validation -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${cbc.version.jackson}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>${cbc.version.jackson}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-commons</artifactId>
            <version>${cbc.version.springdata}</version>
        </dependency>
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>${cbc.version.validation}</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate.validator</groupId>
            <artifactId>hibernate-validator</artifactId>
            <version>${cbc.version.validator}</version>
        </dependency>

        <!-- AOP, annotations and validator -->
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>${cbc.version.aop}</version>
        </dependency>
        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>${cbc.version.annotation}</version>
        </dependency>
        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>${cbc.version.bean}</version>
        </dependency>

        <!-- Hibernate, MySQL, C3PO -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>${cbc.version.mysql}</version>
        </dependency>
        <dependency>
            <groupId>com.mchange</groupId>
            <artifactId>c3p0</artifactId>
            <version>${cbc.version.c3po}</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>${cbc.version.hibernate}</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-c3p0</artifactId>
            <version>${cbc.version.hibernate}</version>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${cbc.version.junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${cbc.version.log4j}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>${cbc.version.log4j}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${cbc.version.surefire}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-depedency-plugin</artifactId>
                <version>${cbc.version.depedency}</version>
            </plugin>
        </plugins>
    </build>
</project>